# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

group("capi_packages") {
  deps = []
  if (multimedia_av_codec_support_capi) {
    deps += [
      "$av_codec_root_dir/interfaces/kits/c:native_av_codec_core",
      "$av_codec_root_dir/interfaces/kits/c:native_av_codec_codec",
      "$av_codec_root_dir/interfaces/kits/c:native_av_codec_avmuxer",
    ]
  }
}

config("av_codec_capi_config") {
  # include_dirs = [
  #   "$av_codec_root_dir/interfaces/inner_api/native",
  #   "$av_codec_root_dir/interfaces/kits/c",
  #   "$av_codec_root_dir/frameworks/native/capi/avmuxer",
  #   "$av_codec_root_dir/frameworks/native/capi/common",
  #   "$av_codec_root_dir/services/utils",
  #   "$av_codec_root_dir/services/dfx/include",
  #   "foundation/multimedia/av_codec/interfaces/kits/c",
  # ]

  include_dirs = [
    "$av_codec_root_dir/frameworks/native/avcodec/",
    "$av_codec_root_dir/frameworks/native/avcodeclist/",
    "$av_codec_root_dir/frameworks/native/avdemuxer/",
    "$av_codec_root_dir/frameworks/native/avmuxer/",
    "$av_codec_root_dir/frameworks/native/avsource/",
    "$av_codec_root_dir/frameworks/native/capi/common/",
    "$av_codec_root_dir/interfaces/inner_api/native/",
    "$av_codec_root_dir/interfaces/kits/c/",
    "$av_codec_root_dir/services/dfx/include/",
    "$av_codec_root_dir/services/engine/avcodeclist/",
    "$av_codec_root_dir/services/engine/base/include/",
    "$av_codec_root_dir/services/engine/muxer/",
    "$av_codec_root_dir/services/engine/plugin/core/",
    "$av_codec_root_dir/services/engine/plugin/interface/",
    "$av_codec_root_dir/services/engine/plugin/plugins/demuxer/ffmpeg_demuxer/",
    "$av_codec_root_dir/services/engine/plugin/plugins/muxer/ffmpeg_muxer/",
    "$av_codec_root_dir/services/include/",
    "$av_codec_root_dir/services/services/avcodeclist/client/",
    "$av_codec_root_dir/services/services/avcodeclist/ipc/",
    "$av_codec_root_dir/services/services/avcodeclist/server/",
    "$av_codec_root_dir/services/services/codec/client/",
    "$av_codec_root_dir/services/services/codec/ipc/",
    "$av_codec_root_dir/services/services/codec/server/",
    "$av_codec_root_dir/services/services/common/",
    "$av_codec_root_dir/services/services/demuxer/client/include/",
    "$av_codec_root_dir/services/services/demuxer/ipc/include/",
    "$av_codec_root_dir/services/services/demuxer/server/include/",
    "$av_codec_root_dir/services/services/factory/",
    "$av_codec_root_dir/services/services/muxer/client/",
    "$av_codec_root_dir/services/services/muxer/ipc/",
    "$av_codec_root_dir/services/services/muxer/server/",
    "$av_codec_root_dir/services/services/sa_avcodec/client/",
    "$av_codec_root_dir/services/services/sa_avcodec/ipc/",
    "$av_codec_root_dir/services/services/sa_avcodec/server/include/",
    "$av_codec_root_dir/services/services/source/client/",
    "$av_codec_root_dir/services/services/source/ipc/",
    "$av_codec_root_dir/services/services/source/server/",
    "$av_codec_root_dir/services/utils/include/",
    # "$av_codec_root_dir/services/services/codecbase/",
    # "$av_codec_root_dir/services/services/codecbase/server/",
    # "$av_codec_root_dir/services/services/codecbase/server/include/",
    "//foundation/graphic/graphic_2d/frameworks/surface/include",
  ]

  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]
}

ohos_shared_library("native_av_codec_core") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }

  configs = [ ":av_codec_capi_config" ]
  
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/common/native_avformat.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avmemory.cpp",
  ]

  if (multimedia_av_codec_support_codeclist) {
    sources += [
#    "$av_codec_root_dir/frameworks/native/capi/common/native_avcapability.cpp",
    ]
  }

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "graphic_standard:surface",
    "hiviewdfx_hilog_native:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_av_codec_codec") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }

  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_avcodec_base.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_audio_decoder.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_audio_encoder.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_video_decoder.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_video_encoder.cpp",
  ]

  configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/utils:av_codec_format",
    "$av_codec_root_dir/interfaces/kits/c:native_av_codec_core",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_standard:surface",
    "hiviewdfx_hilog_native:libhilog",
    "graphic_standard:surface",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_av_codec_avmuxer") {
  install_enable = true
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_avcodec_base.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avformat.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avmemory.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avmuxer/native_avmuxer.cpp",
  ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}
