# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("av_codec_engine_avcodeclist_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  include_dirs = [
    ".",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/multimedia/av_codec/interface/inner_api/native",
    "//foundation/multimedia/av_codec/services/dfx/include",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native",
  ]
}

ohos_static_library("av_codec_engine_avcodeclist") {
  configs = [
    ":av_codec_engine_avcodeclist_config",
  ]

  sources = [
    "avcodec_ability_singleton.cpp",
    "avcodeclist_core.cpp",
  ]

  deps = [
    "//foundation/multimedia/av_codec/services/dfx:av_codec_service_dfx",
    "//foundation/multimedia/av_codec/services/utils:av_codec_service_utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
