import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

AV_CODEC_ROOT_DIR = "//foundation/multimedia/av_codec"

ohos_static_library("av_codec_codec_base"){
    include_dirs=[
        "//foundation/graphic/graphic_2d/frameworks/surface/include",
        "$AV_CODEC_ROOT_DIR/services/engine/base/include",
        "$AV_CODEC_ROOT_DIR/services/engine/common/include",
        "$AV_CODEC_ROOT_DIR/interfaces/inner_api/native",
        "$AV_CODEC_ROOT_DIR/interfaces/kits/c",
        "$AV_CODEC_ROOT_DIR/services/dfx/include",
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//third_party/ffmpeg",
    ]

    sources=[
        "$AV_CODEC_ROOT_DIR/services/engine/base/codecbase.cpp"
    ]

    deps=[
        "//third_party/ffmpeg:libohosffmpeg",
        "//foundation/multimedia/av_codec/services/engine/common:av_codec_engine_common",
    ]

    public_deps= [
        "//foundation/multimedia/av_codec/services/utils:av_codec_format",
        "//foundation/multimedia/av_codec/services/dfx:av_codec_service_dfx",
        ]
    
    external_deps = [
        "hisysevent_native:libhisysevent",
        "hitrace_native:hitrace_meter",
        "hiviewdfx_hilog_native:libhilog",
        "graphic_standard:surface" 
    ]

    subsystem_name = "multimedia"
    part_name = "av_codec"
}