import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_static_library("av_codec_codec_base"){
    include_dirs=[
        "//foundation/graphic/graphic_2d/frameworks/surface/include",
        "$av_codec_root_dir/services/engine/base/include",
        "$av_codec_root_dir/services/engine/common/include",
        "$av_codec_root_dir/interfaces/inner_api/native",
        "$av_codec_root_dir/interfaces/kits/c",
        "$av_codec_root_dir/services/dfx/include",
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//third_party/ffmpeg",
    ]

    sources=[
        "$av_codec_root_dir/services/engine/base/codecbase.cpp"
    ]

    deps=[
        "//third_party/ffmpeg:libohosffmpeg",
        "//foundation/multimedia/av_codec/services/engine/common:av_codec_engine_common",
    ]

    public_deps= [
        "//foundation/multimedia/av_codec/services/utils:av_codec_format",
        "//foundation/multimedia/av_codec/services/dfx:av_codec_service_dfx",
        ]
    
    external_deps = [
        "hisysevent_native:libhisysevent",
        "hitrace_native:hitrace_meter",
        "hiviewdfx_hilog_native:libhilog",
        "graphic_standard:surface" 
    ]

    subsystem_name = "multimedia"
    part_name = "av_codec"
}