# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("av_codec_engine_codeclist_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  include_dirs = [
    ".",
    "//drivers/peripheral/display/interfaces/include",
    "$av_codec_root_dir/interface/inner_api/native",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c/",
    "$av_codec_root_dir/services/engine/codec/include/video/",
    "$av_codec_root_dir/services/engine/base/include/",
    "$av_codec_root_dir/services/utils/include/",
    "$av_codec_root_dir/services/engine/common/include/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api",
    "//third_party/ffmpeg",
  ]
}

ohos_static_library("av_codec_engine_codeclist") {
  configs = [
    ":av_codec_engine_codeclist_config",
  ]

  sources = [
    "codec_ability_singleton.cpp",
    "codeclist_core.cpp",
    "codeclist_builder.cpp",
  ]

  deps = [
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "$av_codec_root_dir/services/utils:av_codec_service_utils",
    "$av_codec_root_dir/services/engine/codec/video:av_codec_video_ffmpeg_codec",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
