# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("plugin_presets") {
  include_dirs = [
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/services/engine/plugin/core",
    "$av_codec_root_dir/services/engine/plugin/interface",
    "$av_codec_root_dir/services/engine/source/hst_releated",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
}

group("av_codec_plugin") {
  deps = [ "plugins:av_codec_plugin_store" ]
}
